# cpp_experiments

basewrapper/: basewrapper.cpp  basewrapper.h
constexpr_constructor/: CMakeLists.txt  main.cpp
constructor_destructor_order/: CMakeLists.txt  main.cpp
controlled_ctor_dtor/: CMakeLists.txt  README.adoc  main.cpp
orchestrate_threads_experi_blocking/: CMakeLists.txt  main.cpp  main2.cpp
refcnt_placement_new/: CMakeLists.txt  main.cpp
reset_ptr_to_this_on_destruction/: CMakeLists.txt  main.cpp
return_value_optimization/: CMakeLists.txt  main.cpp
shared_ptr_selfholding_hold_release/: CMakeLists.txt  main.cpp
signals2/: CMakeLists.txt  README.adoc  main.cpp
signals2/slot_destroys_emitting_signal/: CMakeLists.txt  main.cpp
signals2/slot_disconnect_itself/: main.cpp
str_const/: str_const.cpp
streambuf_cstring/: CMakeLists.txt  main.cpp
string_template_constexpr/: CMakeLists.txt  main.cpp
template_instantiation/: CMakeLists.txt  foo.cpp  foo.h  main.cpp
union_base_derived_for_container_Transportation/: CMakeLists.txt  README.txt  car.h  constexpr.h  getterSetter.h  main.cpp  name.h  plane.h  speed.h  transportation.h  transu.h
